# Amber-Sun

./: .gitignore  CMakeLists.txt  make-project-files.sh
source/: CMakeLists.txt  Input.cpp  Input.h  Main.cpp
source/core/: CMakeLists.txt  Vector3f.h
source/graphics/: CMakeLists.txt  Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  GraphicsManager.cpp  GraphicsManager.h  ShaderProgram.cpp  ShaderProgram.h  glad.c  glad.h
source/maths/: CMakeLists.txt  Matrix4-Functions.h  Matrix4.cpp  Matrix4.h  Vector4.cpp  Vector4.h  meta.h
source/renderer/: CMakeLists.txt
source/shared/: CMakeLists.txt  stdinc.h
source/sim/: CMakeLists.txt  Empire.cpp  Empire.h  GalaxyGenerationTools.cpp  GalaxyGenerationTools.h  Planet.h  PlanetObject.cpp  PlanetObject.h  Species.h  StarObject.cpp  StarObject.h  StellarObject.h  System.cpp  System.h  SystemGenerator.cpp  SystemGenerator.h  SystemObject.cpp  SystemObject.h  Universe.h  UniverseGenerator.cpp  UniverseGenerator.h  UniverseSetupData.h
source/utils/: CMakeLists.txt  SchemeReader.h  Timer.cpp  Timer.h
template/shader/: common_f.glsl  mvp_v.glsl
utilities/git-ignore-builder/: .gitignore  CLion.gitignore  User.gitignore  mergeignore.py
